add refs and last papers read

--- a/ms/ideas.tex
+++ b/ms/ideas.tex
@@ -90,13 +90,20 @@ gradients}
 \citet{vanOmmenKloeke-2012}: looked at leaf lifespan for 189 deciduous and 506 evergreen species across 83 study locations. The LLS of deciduous and evergreen species showed opposite responses to temperature: deciduous LLS increases while evergreen LLS decreases. Pattern with MAP was weak.
 
 \citet{Douma-2011}: data from 156 plots from natural ecosystems throughout The Netherlands.  Decrease in LMA with nutrient availability.
+\citet{VanBodegom-2014}: LMA increase with PET and decrease with number of frost days and the number of wet days (precip > PET). But stronger effect of Nmin (net nitrogen mineralization rate).
+
+\citet{Cornwell-2009}: LMA decrease with soil water availability and increase with elevation.
+
+\citet{Maire-2015}: LMA decrease with Tmax and increase number of frost days.
 
 
 \subsection{Wood density}
 
 \citet{Fortunel-2014}: higher wood density in white sand forest than in flooded forest or terra firme forest (with less water stress). However, variation within site is larger than between sites.
 
-\citet{Swenson-2010}: Mean wood density of US forest inventory plot increase with precipitation and temperature. But variance of wood density decrease with Tmax.
+\citet{Swenson-2010}: Mean wood density of US forest inventory plots increase with precipitation and temperature. But variance of wood density decrease with Tmax.
+
+\citet{VanBodegom-2014}: Wood density decrease with number of frost days. 
 
 \citet{Laughlin-2012}: Data for nine tree species in the south-west USA across 196 plots,between 2200 and 3600 m altitude, corresponding to a 10 degC range in MAT. Concave-shaped relationship with MAT.
 
@@ -108,6 +115,9 @@ gradients}
 
 \citet{Kooyman-2010}: plot means of WD in Australian rainforests tends to increase with soil texture and decrease with soil depth.
 
+\citet{Preston-2010}: Wood density decrease soil water availability, vessel area increase with water availability.
+
+\citet{Cornwell-2009}: Wood density decrease with soil water availability and increase with elevation. Lumen fraction fraction and vessel area increase with soil water availability.
 
 \subsection{Leaf nitrogen}
 
