--- a/ms/references.bib
+++ b/ms/references.bib
@@ -31,7 +31,7 @@
   pages = {351--366},
 }
 
-@Article{Cornwell-2009c,
+@Article{Cornwell-2009,
   title = {Community assembly and shifts in plant trait distributions across an environmental gradient in coastal California},
   volume = {79},
   number = {1},
@@ -189,7 +189,7 @@
   pages = {301--312},
 }
 
-@Article{Preston-2006b,
+@Article{Preston-2006,
   title = {Wood density and vessel traits as distinct correlates of ecological strategy in 51 California coast range angiosperms.},
   volume = {170},
   number = {4},
