--- a/ms/ideas.tex
+++ b/ms/ideas.tex
@@ -123,6 +123,13 @@ gradients}
 
 \citet{Swenson-2010}: Mean leaf nitrogen of US forest inventory plot decrease with precipitation and temperature. And variance of variance of leaf nitrogen decrease with Tmax.
 
+\citet{Reich-2004}: Nmass highest at average temperature (lower in tropicla forest and tundra).
+
+\citet{Maire-2015}: Narea decrease with Precip/PET and temperature range (Tmax - Tmin).
+
+\citet{Moles-2014}: data for 10792 species from 722 sites. Nmass and Narea decrease with increasing MAT.
+
+\citet{Ordonez-2009}: Nmass increase with MAT.
 
 \clearpage
 
