--- a/ms/references.bib
+++ b/ms/references.bib
@@ -189,6 +189,20 @@
   pages = {301--312},
 }
 
+
+@article{Ordonez-2009,
+  title = {A global study of relationships between leaf traits, climate and soil measures of nutrient fertility},
+  volume = {18},
+  doi = {10.1111/j.1466-8238.2008.00441.x},
+  number = {2},
+  journal = {Global Ecology and Biogeography},
+  author = {Ordo{\~n}ez, Jenny C. and van Bodegom, Peter M. and Witte, Jan-Philip M. and Wright, Ian J. and Reich, Peter B. and Aerts, Rien},
+  month = mar,
+  year = {2009},
+  pages = {137--149}
+}
+
+
 @Article{Preston-2006,
   title = {Wood density and vessel traits as distinct correlates of ecological strategy in 51 California coast range angiosperms.},
   volume = {170},
@@ -198,6 +212,19 @@
   year = {2006},
   pages = {807--18},
 }
+
+
+@article{Reich-2004,
+  title = {Global patterns of plant leaf N and P in relation to temperature and latitude},
+  volume = {101},
+  url = {http://www.pnas.org/content/101/30/11001.short},
+  number = {30},
+  journal = {Proceedings of the National Academy of Sciences of the United States of America},
+  author = {Reich, P. B. and Oleksyn, J.},
+  year = {2004},
+  pages = {11001--11006}
+}
+
 
 @Article{Reich-2007,
   title = {Predicting leaf physiology from simple plant and climate attributes: A global {GLOPNET} analysis},
