--- a/ms/references.bib
+++ b/ms/references.bib
@@ -2,7 +2,6 @@
   title = {Variation in wood density determines spatial patterns in Amazonian forest biomass},
   volume = {10},
   doi = {10.1111/j.1365-2486.2004.00751.x},
-  number = {5},
   journal = {Global Change Biology},
   author = {Timothy R. Baker and Oliver L. Phillips and Yadvinder Malhi and Samuel Almeida and Luzmila Arroyo and Anthony Di Fiore and Terry Erwin and Tim J. Killeen and S. G. Laurance and W. F. Laurance and S. L. Lewis and Jon Lloyd and Abel Monteagudo and David A. Neill and S. Pati{\~n}o and N. C. A. Pitman and J. N. M. Silva and R. V. Martinez},
   year = {2004},
@@ -13,7 +12,6 @@
   title = {Regional and phylogenetic variation of wood density across 2456 neotropical tree species},
   volume = {16},
   doi = {10.1890/1051-0761(2006)016[2356:RAPVOW]2.0.CO;2},
-  number = {6},
   journal = {Ecological Applications},
   author = {J. Chave and H. C. Muller-Landau and T. R. Baker and Tomas A Easdale and H. T. Steege and C. O. Webb},
   year = {2006},
@@ -24,7 +22,6 @@
   title = {Towards a worldwide wood economics spectrum},
   volume = {12},
   doi = {10.1111/j.1461-0248.2009.01285.x},
-  number = {4},
   journal = {Ecology Letters},
   author = {J. Chave and D. A. Coomes and S. Jansen and S. L. Lewis and N. G. Swenson and A. Zanne},
   year = {2009},
@@ -34,7 +31,6 @@
 @Article{Cornwell-2009,
   title = {Community assembly and shifts in plant trait distributions across an environmental gradient in coastal California},
   volume = {79},
-  number = {1},
   journal = {Ecological Monographs},
   author = {William K. Cornwell and David D. Ackerly},
   year = {2009},
@@ -45,7 +41,6 @@
   title = {Disturbance and resource availability act differently on the same suite of plant traits: revisiting assembly hypotheses},
   volume = {93},
   doi = {10.1890/10-1961.1},
-  number = {4},
   journal = {Ecology},
   author = {J. C. Douma and B Shipley and J.-P. M. Witte and R Aerts and P. M. van Bodegom},
   year = {2011},
@@ -87,7 +82,6 @@
   title = {Leaf, stem and root tissue strategies across 758 Neotropical tree species},
   volume = {26},
   doi = {10.1111/j.1365-2435.2012.02020.x},
-  number = {5},
   journal = {Functional Ecology},
   author = {Claire Fortunel and Paul V. A. Fine and Christopher Baraloto},
   year = {2012},
@@ -117,7 +111,6 @@
 @Article{Gleason-2012,
   title = {Stem xylem conductivity is key to plant water balance across Australian angiosperm species: Plant stem hydraulic traits},
   volume = {26},
-  number = {2},
   journal = {Functional Ecology},
   author = {Sean M. Gleason and Don W. Butler and Kasia Ziemi{\'n}ska and Pawe{\l} Waryszak and Mark Westoby},
   year = {2012},
@@ -128,7 +121,6 @@
   title = {Plant functional traits in Australian subtropical rain forest : partitioning within-community from cross-landscape variation},
   volume = {98},
   doi = {10.1111/j.1365-2745.2010.01642.x},
-  number = {3},
   journal = {Journal of Ecology},
   author = {R. Kooyman and W. Cornwell and M. Westoby},
   year = {2010},
@@ -139,7 +131,6 @@
   title = {A predictive model of community assembly that incorporates intraspecific trait variation},
   volume = {15},
   doi = {10.1111/j.1461-0248.2012.01852.x},
-  number = {11},
   journal = {Ecology Letters},
   author = {Daniel C. Laughlin and Chaitanya Joshi and Peter M. Bodegom and Zachary A. Bastow and Peter Z. Ful \'e},
   year = {2012},
@@ -150,7 +141,6 @@
   title = {Global effects of soil and climate on leaf photosynthetic traits and rates: Effects of soil and climate on photosynthetic traits},
   volume = {24},
   doi = {10.1111/geb.12296},
-  number = {6},
   journal = {Global Ecology and Biogeography},
   author = {Vincent Maire and Ian J. Wright and I. Colin Prentice and Niels H. Batjes and Radika Bhaskar and Peter M. van Bodegom and Will K. Cornwell and David Ellsworth and {\"U}lo Niinemets and Alejandro Ordonez and Peter B. Reich and Louis S. Santiago},
   year = {2015},
@@ -171,7 +161,6 @@
   title = {Global-scale climatic controls of leaf dry mass per area, density, and thickness in trees and shrubs},
   volume = {82},
   doi = {10.1890/0012-9658(2001)082[0453:GSCCOL]2.0.CO;2},
-  number = {2},
   journal = {Ecology},
   author = {{\"U}lo Niinemets},
   year = {2001},
@@ -182,7 +171,6 @@
   title = {Global patterns of leaf mechanical properties},
   volume = {14},
   doi = {10.1111/j.1461-0248.2010.01582.x},
-  number = {3},
   journal = {Ecology Letters},
   author = {Yusuke Onoda and Mark Westoby and Peter B. Adler and Amy M. F. Choong and Fiona J. Clissold and Johannes H. C. Cornelissen and Sandra D{\'\i}az and Nathaniel J. Dominy and Alison Elgart and Lucas Enrico and Paul V. A. Fine and Jerome J. Howard and Adel Jalili and Kaoru Kitajima and Hiroko Kurokawa and Clare McArthur and Peter W. Lucas and Lars Markesteijn and Natalia P{\'e}rez-Harguindeguy and Lourens Poorter and Lora Richards and Louis S. Santiago and Enio E. Sosinski and Sunshine A. Van Bael and David I. Warton and I. J. Wright and S. J. Wright and Nayuta Yamashita},
   year = {2011},
@@ -194,7 +182,6 @@
   title = {A global study of relationships between leaf traits, climate and soil measures of nutrient fertility},
   volume = {18},
   doi = {10.1111/j.1466-8238.2008.00441.x},
-  number = {2},
   journal = {Global Ecology and Biogeography},
   author = {Ordo{\~n}ez, Jenny C. and van Bodegom, Peter M. and Witte, Jan-Philip M. and Wright, Ian J. and Reich, Peter B. and Aerts, Rien},
   month = mar,
@@ -206,9 +193,8 @@
 @Article{Preston-2006,
   title = {Wood density and vessel traits as distinct correlates of ecological strategy in 51 California coast range angiosperms.},
   volume = {170},
-  number = {4},
   journal = {New Phytologist},
-  author = {Katherine a Preston and William K Cornwell and Jeanne L Denoyer},
+  author = {Katherine A Preston and William K Cornwell and Jeanne L Denoyer},
   year = {2006},
   pages = {807--18},
 }
@@ -218,7 +204,6 @@
   title = {Global patterns of plant leaf N and P in relation to temperature and latitude},
   volume = {101},
   url = {http://www.pnas.org/content/101/30/11001.short},
-  number = {30},
   journal = {Proceedings of the National Academy of Sciences of the United States of America},
   author = {Reich, P. B. and Oleksyn, J.},
   year = {2004},
@@ -229,7 +214,6 @@
 @Article{Reich-2007,
   title = {Predicting leaf physiology from simple plant and climate attributes: A global {GLOPNET} analysis},
   volume = {17},
-  number = {7},
   journal = {Ecological Applications},
   author = {P. B. Reich and I. J. Wright and C. H. Lusk},
   year = {2007},
@@ -240,7 +224,6 @@
   title = {Biogeographic variation in evergreen conifer needle longevity and impacts on boreal forest carbon cycle projections},
   volume = {111},
   doi = {10.1073/pnas.1216054110},
-  number = {38},
   journal = {Proceedings of the National Academy of Sciences},
   author = {Peter B. Reich and Roy L. Rich and Xingjie Lu and Ying-Ping Wang and Jacek Oleksyn},
   year = {2014},
@@ -272,7 +255,6 @@
 @Article{Swenson-2010,
   title = {Plant geography upon the basis of functional traits: an example from eastern North American trees.},
   volume = {91},
-  number = {8},
   journal = {Ecology},
   author = {Nathan G Swenson and Michael D Weiser},
   year = {2010},
@@ -291,7 +273,6 @@
   title = {Leaves at low versus high rainfall: coordination of structure, lifespan and physiology},
   volume = {155},
   doi = {10.1046/j.1469-8137.2002.00479.x},
-  number = {3},
   journal = {New Phytologist},
   author = {Wright, I. J. and Westoby, M.},
   year = {2002},
@@ -302,7 +283,6 @@
   title = {The world-wide leaf economics spectrum},
   volume = {428},
   doi = {10.1038/nature02403},
-  number = {2403},
   journal = {Nature},
   author = {I. J. Wright and P. B. Reich and M. Westoby and D.D. Ackerly and Z. Baruch and F. Bongers and J. Cavender-Bares and F.S. Chapin and J.H.C. Cornelissen and M. Diemer and J. Flexas and E. Garnier and P.K. Groom and J. Gulias and K. Hikosaka and B.B. Lamont and T. Lee and W. Lee and C. Lusk and J.J. Midgley and M-L. Navas and {\"U}. Niinemets and J. Oleksyn and N. Osada and H. Poorter and P. Poot and L. Prior and V.I. Pyankov and C. Roumet and S.C. Thomas and M.G. Tjoelker and E. Veneklaas and R. Villar},
   year = {2004},
@@ -323,7 +303,6 @@
   title = {Global quantification of contrasting leaf life span strategies for deciduous and evergreen species in response to environmental conditions},
   volume = {21},
   doi = {10.1111/j.1466-8238.2011.00667.x},
-  number = {2},
   journal = {Global Ecology and Biogeography},
   author = {A. E. E. van Ommen Kloeke and J. C. Douma and J. C. Ordo{\~n}ez and P. B. Reich and P. M. van Bodegom},
   year = {2012},
