add summary table

--- a/ms/ideas.tex
+++ b/ms/ideas.tex
@@ -119,6 +119,8 @@ gradients}
 
 \citet{Cornwell-2009}: Wood density decrease with soil water availability and increase with elevation. Lumen fraction fraction and vessel area increase with soil water availability.
 
+\citet{Stahl-2014}: Wood density increase with MAT but nore relation with MAP.
+
 \subsection{Leaf nitrogen}
 
 \citet{Swenson-2010}: Mean leaf nitrogen of US forest inventory plot decrease with precipitation and temperature. And variance of variance of leaf nitrogen decrease with Tmax.
