--- a/ms/references.bib
+++ b/ms/references.bib
@@ -256,6 +256,19 @@
   pages = {n/a--n/a},
 }
 
+
+@article{Stahl-2014,
+  title = {Predicting species' range limits from functional traits for the tree flora of North America},
+  volume = {111},
+  url = {http://www.pnas.org/content/111/38/13739.short},
+  number = {38},
+  journal = {Proceedings of the National Academy of Sciences},
+  author = {Stahl, Ulrike and Reu, Bj{\"o}rn and Wirth, Christian},
+  year = {2014},
+  pages = {13739--13744}
+}
+
+
 @Article{Swenson-2010,
   title = {Plant geography upon the basis of functional traits: an example from eastern North American trees.},
   volume = {91},
