add refs for models and some key ideas

--- a/ms/ideas.tex
+++ b/ms/ideas.tex
@@ -65,7 +65,28 @@ Here we use a new model -- \plant\ \citep{Falster-2016} -- that connects directl
 
 Key questions
 
+Explore how different assumption about how environmental gradients
+affect the dynamics changes the prediction of variation in traits
+composition.
 
+1. Environmental gradients changes productivity (photosynthesis) and
+thus competition for light and selection on LMA
+
+2. The trade-off underpinning LMA-LLS is affected by the gradient
+affecting productivity (in
+more arid sites LLS at a given LMA is shorter)
+
+2. Environmental gradients affect productivity (photosynthesis) but a
+second traits allow for an adaptation in term of photosynthesis to low water availabilty but
+with a cost ( higher leaf N could lead to higher photosynthesis in low
+light conditions, but this comes at both a respiration cost and higher
+leaf turnover cost).
+
+3. Environmental gradients affect survival but a
+second traits allow for an adaptation to low water availabilty in term
+of survival but
+with a carbon cost (for instance lower vessel size leading to lower
+Amax, ).
 
 
 \section{Review: Empirical patterns of trait variation across abiotic
