--- a/ms/references.bib
+++ b/ms/references.bib
@@ -78,6 +78,31 @@
   pages = {\textit{submitted}},
 }
 
+@article{Farrior-2013,
+  title = {Competition for Water and Light in Closed-Canopy Forests: A Tractable Model of Carbon Allocation with Implications for Carbon Sinks},
+  volume = {181},
+  shorttitle = {Competition for Water and Light in Closed-Canopy Forests},
+  url = {http://www.jstor.org/stable/10.1086/669153},
+  number = {3},
+  journal = {The American Naturalist},
+  author = {Farrior, Caroline E. and Dybzinski, Ray and Levin, Simon A. and Pacala, Stephen W.},
+  year = {2013},
+  pages = {314--330}
+}
+
+@article{Fisher-2010,
+  title = {Assessing uncertainties in a second-generation dynamic vegetation model caused by ecological scale limitations},
+  volume = {187},
+  doi = {10.1111/j.1469-8137.2010.03340.x},
+  number = {3},
+  journal = {New Phytologist},
+  author = {Fisher, Rosie and {McDowell}, Nate and Purves, Drew and Moorcroft, Paul and Sitch, Stephen and Cox, Peter and Huntingford, Chris and Meir, Patrick and Ian Woodward, F.},
+  month = aug,
+  year = {2010},
+  pages = {666--681}
+}
+
+
 @Article{Fortunel-2012,
   title = {Leaf, stem and root tissue strategies across 758 Neotropical tree species},
   volume = {26},
@@ -116,6 +141,19 @@
   year = {2012},
   pages = {343--352},
 }
+
+@article{Huston-1987,
+  title = {Plant Succession: Life History and Competition},
+  volume = {130},
+  doi = {10.2307/2461854},
+  number = {2},
+  journal = {The American Naturalist},
+  author = {Huston, Michael and Smith, Thomas},
+  month = aug,
+  year = {1987},
+  pages = {168--198}
+}
+
 
 @Article{Kooyman-2010,
   title = {Plant functional traits in Australian subtropical rain forest : partitioning within-community from cross-landscape variation},
@@ -230,6 +268,58 @@
   pages = {13703--13708},
 }
 
+@article{Sakschewski-2015,
+  title = {Leaf and stem economics spectra drive diversity of functional plant traits in a dynamic global vegetation model},
+  volume = {21},
+  doi = {10.1111/gcb.12870},
+  number = {7},
+  journal = {Global Change Biology},
+  author = {Sakschewski, Boris and von Bloh, Werner and Boit, Alice and Rammig, Anja and Kattge, Jens and Poorter, Lourens and Pe{\~n}uelas, Josep and Thonicke, Kirsten},
+  month = jul,
+  year = {2015},
+  pages = {2711--2725}
+}
+
+@article{Scheiter-2013,
+  title = {Next-generation dynamic global vegetation models: learning from community ecology},
+  volume = {198},
+  shorttitle = {Next-generation dynamic global vegetation models},
+  doi = {10.1111/nph.12210},
+  number = {3},
+  journal = {New Phytologist},
+  author = {Scheiter, Simon and Langan, Liam and Higgins, Steven I.},
+  month = may,
+  year = {2013},
+  pages = {957--969}
+}
+
+@article{Scheiter-2009,
+  title = {Impacts of climate change on the vegetation of Africa: an adaptive dynamic vegetation modelling approach},
+  volume = {15},
+  shorttitle = {Impacts of climate change on the vegetation of Africa},
+  doi = {10.1111/j.1365-2486.2008.01838.x},
+  number = {9},
+  journal = {Global Change Biology},
+  author = {Scheiter, Simon and Higgins, Steven I.},
+  month = sep,
+  year = {2009},
+  pages = {2224--2246}
+}
+
+@article{Sitch-2008,
+  title = {Evaluation of the terrestrial carbon cycle, future plant geography and climate-carbon cycle feedbacks using five Dynamic Global Vegetation Models ({DGVMs})},
+  volume = {14},
+  doi = {10.1111/j.1365-2486.2008.01626.x},
+  number = {9},
+  journal = {Global Change Biology},
+  author = {Sitch, S. and Huntingford, C. and Gedney, N. and Levy, P. E. and Lomas, M. and Piao, S. L. and Betts, R. and Ciais, P. and Cox, P. and Friedlingstein, P. and Jones, C. D. and Prentice, I. C. and Woodward, F. I.},
+  month = sep,
+  year = {2008},
+  pages = {2015--2039}
+}
+
+
+
 @Article{Simova-2014,
   title = {Shifts in trait means and variances in North American tree assemblages: species richness patterns are loosely related to the functional space},
   doi = {10.1111/ecog.00867},
@@ -237,6 +327,19 @@
   author = {Irena {{\v S}{\'\i}mov{\'a}} and Cyrille Violle and Nathan J. B. Kraft and David Storch and Jens-Christian Svenning and Brad Boyle and John C. Donoghue and Peter J{\o}rgensen and Brian J. McGill and Naia Morueta-Holme and William H. Piel and Robert K. Peet and Jim Regetz and Mark Schildhauer and Nick Spencer and Barbara Thiers and Susan Wiser and Brian J. Enquist},
   year = {2014},
   pages = {n/a--n/a},
+}
+
+@article{Smith-1989,
+  title = {A theory of the spatial and temporal dynamics of plant communities},
+  volume = {83},
+  doi = {10.1007/BF00031680},
+  number = {1-2},
+  journal = {Vegetatio},
+  author = {Smith, Thomas and Huston, Michael},
+  month = oct,
+  year = {1989},
+  keywords = {competition,individual-based model,plant functional type,Resource gradient,succession,Tradeoff,Zonation},
+  pages = {49--69}
 }
 
 
@@ -307,4 +410,17 @@
   author = {A. E. E. van Ommen Kloeke and J. C. Douma and J. C. Ordo{\~n}ez and P. B. Reich and P. M. van Bodegom},
   year = {2012},
   pages = {224--235},
+}
+
+@article{Zavala-2005,
+  title = {A mechanistic model of tree competition and facilitation for Mediterranean forests: Scaling from leaf physiology to stand dynamics},
+  volume = {188},
+  shorttitle = {A mechanistic model of tree competition and facilitation for Mediterranean forests},
+  doi = {10.1016/j.ecolmodel.2005.05.006},
+  number = {1},
+  journal = {Ecological Modelling},
+  author = {Zavala, M.A. and Bravo de la Parra, R.},
+  month = oct,
+  year = {2005},
+  pages = {76--92}
 }
